work in progress tree implementation